--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:orientation="vertical"
@@ -11,21 +9,22 @@
     tools:context=".MainActivity">
 
     <EditText
+
         android:id="@+id/edtWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/enter_your_weight"
-        android:inputType="number"
-        />
+        android:inputType="number" />
+
     <EditText
         android:id="@+id/edtHeightFt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/enter_your_height_ft"
-        android:inputType="number"
-        />
+        android:inputType="number" />
+
     <EditText
         android:id="@+id/edtHeightIn"
         android:layout_width="wrap_content"
@@ -36,13 +35,14 @@
 
 
         />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnCalculate"
         android:layout_marginTop="20dp"
-        android:text="Calculate BMI"
-        />
+        android:text="Calculate BMI" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,8 +51,7 @@
         android:id="@+id/txtresult"
         android:text="Result"
         android:textSize="20sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
 
 </LinearLayout>
